--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1",
+    "date-fns": "2.14.0",
+    "formik": "2.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "4.0.5",
     "typescript": "3.7.5"
   },
   "devDependencies": {
@@ -36,6 +42,9 @@
     "@types/jest": "24.9.1",
     "@types/node": "12.12.47",
     "@types/react": "16.9.38",
-    "@types/react-dom": "16.9.8"
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
+    "node-sass": "4.14.1",
+    "redux-devtools-extension": "2.13.8"
   }
 }
