--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-code-test",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -24,27 +24,27 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "4.10.2",
-    "@material-ui/icons": "4.9.1",
-    "date-fns": "2.14.0",
-    "formik": "2.1.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "react-scripts": "3.4.1",
-    "redux": "4.0.5",
-    "typescript": "3.7.5"
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "date-fns": "2.25.0",
+    "formik": "2.2.9",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.5",
+    "react-scripts": "4.0.3",
+    "redux": "4.1.1",
+    "typescript": "4.4.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "7.2.1",
-    "@types/jest": "24.9.1",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.2.1",
+    "@types/jest": "27.0.2",
     "@types/node": "12.12.47",
-    "@types/react": "16.9.38",
-    "@types/react-dom": "16.9.8",
-    "@types/react-redux": "7.1.9",
-    "node-sass": "4.14.1",
-    "redux-devtools-extension": "2.13.8"
+    "@types/react": "17.0.27",
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.18",
+    "sass": "1.42.1",
+    "redux-devtools-extension": "2.13.9"
   }
 }
