--- a/package.json
+++ b/package.json
@@ -2,49 +2,48 @@
   "name": "frontend-code-test",
   "version": "1.0.2",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "vitest run --environment=jsdom"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
-    "date-fns": "2.25.0",
-    "formik": "2.2.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
-    "react-scripts": "4.0.3",
-    "redux": "4.1.1",
-    "typescript": "4.4.3"
+    "@emotion/cache": "11.11.0",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.15.9",
+    "@reduxjs/toolkit": "2.1.0",
+    "date-fns": "2.30.0",
+    "formik": "2.4.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "9.1.0",
+    "redux": "5.0.1",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.2",
-    "@types/node": "12.12.47",
-    "@types/react": "17.0.27",
-    "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.18",
-    "sass": "1.42.1",
-    "redux-devtools-extension": "2.13.9"
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "@types/react-redux": "7.1.33",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "sass": "1.70.0",
+    "jsdom": "24.0.0",
+    "typescript": "5.2.2",
+    "vite": "5.1.0",
+    "vitest": "1.2.2"
   }
 }
