--- a/package.json
+++ b/package.json
@@ -12,38 +12,31 @@
     "test": "vitest run --environment=jsdom"
   },
   "dependencies": {
-    "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.9",
-    "@reduxjs/toolkit": "2.1.0",
-    "date-fns": "2.30.0",
-    "formik": "2.4.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "9.1.0",
-    "redux": "5.0.1",
-    "typescript": "5.3.3"
+    "@emotion/cache": "11.14.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/material": "6.4.6",
+    "@reduxjs/toolkit": "2.6.0",
+    "date-fns": "4.1.0",
+    "formik": "2.4.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-redux": "9.2.0",
+    "redux": "5.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "14.2.1",
-    "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.12",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "20.11.17",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "@types/react-redux": "7.1.33",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "@vitejs/plugin-react": "4.2.1",
-    "eslint": "8.56.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.5",
-    "sass": "1.70.0",
-    "jsdom": "24.0.0",
-    "typescript": "5.2.2",
-    "vite": "5.1.0",
-    "vitest": "1.2.2"
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@types/react-redux": "7.1.34",
+    "@vitejs/plugin-react": "4.3.4",
+    "sass": "1.85.1",
+    "jsdom": "26.0.0",
+    "typescript": "5.8.2",
+    "vite": "6.2.0",
+    "vitest": "3.0.7"
   }
 }
